# aoc

./: Cargo.toml
copy_me/: Cargo.toml
copy_me/src/: lib.rs
day_1/src/: lib.rs
day_10/src/: lib.rs
day_11/: Cargo.toml  input.txt  test.txt
day_11/src/: lib.rs
day_12/: test.txt
day_12/src/: lib.rs
day_2/src/: lib.rs
day_3/src/: lib.rs
day_4/src/: lib.rs
day_5/: input.txt
day_5/src/: lib.rs
day_6/: test.txt
day_6/src/: lib.rs
day_7/src/: lib.rs
day_8/: test2.txt
day_8/src/: lib.rs
day_9/src/: lib.rs
src/: main.rs
