[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_1 = {path ='day_1'}
day_2 = {path ='day_2'}
day_3 = {path ='day_3'}
day_4 = {path ='day_4'}
day_5 = {path ='day_5'}
day_6 = {path ='day_6'}
day_7 = {path ='day_7'}
day_8 = {path ='day_8'}
day_9 = {path ='day_9'}
day_10 = {path ='day_10'}